[tool.poetry]
name = "pyskoptimize"
version = "0.1.0"
description = "A configuration driven approach to facilitating Bayesian Hyperparameter Tuning"
authors = ["ed-turner <edward.turner@pyscale.net>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.2"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
scikit-optimize = "^0.9.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
