[tool.poetry]
name = "pyskoptimize"
version = "0.1.3"
description = "A configuration driven approach to facilitating Bayesian Hyperparameter Tuning"
authors = ["ed-turner <edward.turner@pyscale.net>"]
homepage = "https://www.pyscale.net/PySkOptimize/"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/pyscale/PySkOptimize"
keywords = [
    "python", "data science", "low-code", "software development"
    ]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
    ]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.2"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
scikit-optimize = "^0.9.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
